[package]
name = "transfers-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
massa_sdk = { git = "https://github.com/massalabs/massa", rev = "a2d15b09ea07d8d59fbc34af8d52edf56246181d", package = "massa_sdk" }
massa_models = { git = "https://github.com/massalabs/massa", rev = "a2d15b09ea07d8d59fbc34af8d52edf56246181d", package = "massa_models" }
massa_time = { git = "https://github.com/massalabs/massa", rev = "a2d15b09ea07d8d59fbc34af8d52edf56246181d", package = "massa_time" }
massa_api_exports = { git = "https://github.com/massalabs/massa", rev = "a2d15b09ea07d8d59fbc34af8d52edf56246181d", package = "massa_api_exports" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
form_urlencoded = "1.2.1"
mysql = "24.0.0"
serde_json = "1.0"
serde = "1.0.197"
dotenv = "0.15.0"
time = "0.3.31"
prometheus = "0.13"
lazy_static = "1.4"
rayon = "1.9.0"